--- a/install
+++ b/install
@@ -3,7 +3,10 @@
 SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" > /dev/null && pwd )"
 
 sudo apt-get update
-sudo apt-get install -y python3 python3-dev python3-setuptools python3-pip python3-numpy
+sudo apt-get install -y \
+  python3 python3-dev python3-setuptools \
+  python3-pip python3-numpy python3-gi \
+  gobject-introspection gir1.2-gtk-3.0
 
 echo "Installing hx711py"
 (cd $SCRIPT_DIR/hx711py && python3 setup.py install)
