--- a/install
+++ b/install
@@ -2,12 +2,21 @@
 
 SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" > /dev/null && pwd )"
 
-sudo apt-get update
-sudo apt-get install -y \
+rm -rf /var/lib/apt/lists/* && sudo apt-get update
+
+sudo apt-get install -y --no-install-recommends \
   python3 python3-dev python3-setuptools \
-  python3-pip python3-numpy python3-gi \
-  gobject-introspection gir1.2-gtk-3.0
+  python3-pip python3-numpy \
+  apt-transport-https lsb-release \
+  ca-certificates gcc g++ make \
+  gobject-introspection gir1.2-gtk-3.0 x11-common
 
 echo "Installing hx711py"
 (cd $SCRIPT_DIR/hx711py && python3 setup.py install)
 
+echo "Installing UI dependencies"
+(cd $SCRIPT_DIR/ui && npm install)
+
+echo "Installing NodeJS..."
+wget -qO- https://deb.nodesource.com/setup_12.x | sudo -E bash -
+sudo apt-get install -y nodejs
